test/parser/struct_decl_error.dmz
// RUN: dmz %s -ast-dump 2>&1 | filecheck %s
struct Error {
    r: i32,
    let g = 0,
    // CHECK: [[# @LINE -1 ]]:5: error: expected identifier or fn in struct
    b: i32,
}
